--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,6 +7,12 @@
   width: 1200px;
   padding: 0;
 }
+ul {
+  list-style: none;
+}
+a:hover {
+  text-decoration: none;
+}
 #tab-container {
   width: 100%;
   height: 32px;
@@ -25,11 +31,137 @@
   color: #ee394b;
   text-decoration: none;
 }
+#tab-container .top-navLeft a:active {
+  text-decoration: none;
+}
 #tab-container .top-navLeft .welcome {
   margin-right: 20px;
 }
 #tab-container .top-navLeft .loginmenu .login {
   margin-right: 20px;
+}
+#tab-container .modal-content {
+  width: 460px;
+  height: 420px;
+  position: relative;
+  background-color: #fff;
+  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 0;
+  background: #fff url(../img/login-logo.png) no-repeat;
+}
+#tab-container .modal-content .close {
+  position: absolute;
+  right: 14px;
+  top: 12px;
+  width: 25px;
+  height: 25px;
+  background: url(../img/login-tn.png) no-repeat 5px -44px;
+}
+#tab-container .modal-content .close:hover {
+  background-position: -40px -44px;
+}
+#tab-container .modal-content .modal-header {
+  padding: 0 50px;
+}
+#tab-container .modal-content .modal-header .modal-title {
+  height: 50px;
+  line-height: 50px;
+  color: #5aa700;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0 0 0 54px;
+}
+#tab-container .modal-content .modal-header .modal-title .title-dot {
+  width: 3px;
+  height: 3px;
+  background: #5aa700;
+  border-radius: 50%;
+  float: left;
+  margin: 24px 10px 0 0;
+}
+#tab-container .modal-content .modal-body {
+  width: 360px;
+  margin: 0 auto;
+  height: 316px;
+}
+#tab-container .modal-content .modal-body .sub-title {
+  font-size: 16px;
+  margin: 19px 0 10px;
+  color: #333;
+}
+#tab-container .modal-content .modal-body .protocol-con {
+  font-size: 13px;
+  position: absolute;
+  bottom: 6px;
+  left: 64px;
+  margin: 0;
+}
+#tab-container .modal-content .modal-body .protocol-con .protocol-link {
+  color: #5aa700;
+  text-decoration: none;
+}
+#tab-container .modal-content .modal-body .btn-login {
+  height: 48px;
+  line-height: 48px;
+  font-size: 16px;
+  display: block;
+  margin-top: 80px;
+  text-align: center;
+  color: #fff;
+  background-color: #5aa700;
+  text-decoration: none;
+}
+#tab-container .modal-content .modal-body .info-container {
+  height: 78px;
+  border-bottom: 1px solid #ddd;
+  position: relative;
+}
+#tab-container .modal-content .modal-body .info-container .country-container {
+  margin-top: 48px;
+  color: #333;
+  font-size: 16px;
+  cursor: pointer;
+  float: left;
+  position: relative;
+  z-index: 3;
+}
+#tab-container .modal-content .modal-body .info-container .country-container .country-incon {
+  width: 118px;
+}
+#tab-container .modal-content .modal-body .info-container .country-container .country-incon a {
+  max-width: 94px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  float: left;
+  color: #333;
+  text-decoration: none;
+}
+#tab-container .modal-content .modal-body .info-container .errorInfo {
+  color: #f94343;
+  font-size: 12px;
+  padding-top: 26px;
+  float: left;
+}
+#tab-container .modal-content .modal-body .info-container .tip-container {
+  position: relative;
+  float: left;
+}
+#tab-container .modal-content .modal-body .info-container .tip-container .tip-info {
+  font-size: 16px;
+  color: #aaa;
+  position: absolute;
+  top: 5px;
+  left: 0;
+}
+#tab-container .modal-content .modal-body .info-container .tip-container .txt-info {
+  width: 190px;
+  border: 0;
+  outline: 0;
+  color: #333;
+  font-size: 16px;
+  margin-top: 8px;
 }
 #tab-container .top-navRight {
   height: 100%;
@@ -82,6 +214,7 @@
   padding: 10px;
   width: 202px;
   display: none;
+  z-index: 99;
 }
 #tab-container #QRcode .QR_L {
   float: left;
@@ -172,6 +305,67 @@
 }
 #head > .container #head_searchBox .search_hots .hots {
   color: #ee394b;
+}
+#head > .container .headAd {
+  float: right;
+  margin-top: 30px;
+}
+#head > .container .headAd .arrow-item {
+  float: right;
+  margin: 31px 0 0 10px;
+  width: 39px;
+  height: 19px;
+  background: url(../img/arrow2.gif) no-repeat;
+}
+#head > .container .headAd .arrow-item span {
+  float: left;
+  width: 19px;
+  height: 19px;
+  cursor: pointer;
+}
+#head > .container .headAd .header-pro {
+  float: left;
+  width: 160px;
+  height: 50px;
+  overflow: hidden;
+  position: relative;
+}
+#head > .container .headAd .header-pro li {
+  position: absolute;
+  width: 100%;
+}
+#head > .container .headAd .header-pro li a:hover {
+  text-decoration: none;
+}
+#head > .container .headAd .header-pro li img {
+  float: left;
+  margin-right: 10px;
+}
+#head > .container .headAd .header-pro li p {
+  float: left;
+  width: 100px;
+  line-height: 20px;
+  padding: 5px 0;
+  font-size: 12px;
+}
+#head > .container .headAd .header-pro li p b {
+  _width: 100px;
+  display: block;
+  color: #999;
+  font-weight: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  cursor: pointer;
+}
+#head > .container .headAd .header-pro li p span {
+  display: block;
+  width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #666;
+  cursor: pointer;
 }
 #main_nav {
   width: 100%;
@@ -1037,4 +1231,421 @@
 }
 #footer_down .container .mod_footer_links .tc a:hover {
   text-decoration: none;
+}
+.detail_toolbar {
+  width: 42px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3003;
+  background: #000;
+}
+.detail_toolbar ul {
+  list-style: none;
+  text-align: center;
+}
+.detail_toolbar .toolbar_link {
+  width: 21px;
+  height: 23px;
+  display: inline-block;
+  background: url(../img/toolbar_linkIcon.png) no-repeat;
+  margin: 10px 0;
+  cursor: pointer;
+}
+.detail_toolbar .item_car {
+  border-top: 1px dotted #5e5e5e;
+  border-bottom: 1px dotted #5e5e5e;
+}
+.detail_toolbar .item_car .toolbar_car {
+  font-size: 14px;
+  color: #fff;
+  display: block;
+  padding: 12px 0;
+  position: relative;
+}
+.detail_toolbar .item_car .toolbar_car:hover {
+  background: #ee394b;
+  color: #fff;
+}
+.detail_toolbar .item_car .toolbar_car:hover .toolbar_nub {
+  background: #fff;
+  color: #ee394b;
+}
+.detail_toolbar .item_car .toolbar_car:hover .toolbar_toogel {
+  display: inline-block;
+}
+.detail_toolbar .item_car .toolbar_car .toolbar_carInfo {
+  width: 20px;
+  display: block;
+  padding-left: 14px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  line-height: 16px;
+}
+.detail_toolbar .item_car .toolbar_car .toolbar_nub {
+  width: 20px;
+  height: 20px;
+  display: block;
+  background: #ee394b;
+  color: #fff;
+  text-align: center;
+  line-height: 20px;
+  font-size: 14px;
+  border-radius: 10px;
+  margin-left: 12px;
+}
+.detail_toolbar .item_car .toolbar_car .toolbar_toogel {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  border-color: transparent transparent transparent #fff;
+  border-style: dashed dashed dashed solid;
+  border-width: 6px;
+  display: none;
+  position: absolute;
+  left: 0;
+  *left: -11px;
+  top: 58px;
+}
+.detail_toolbar .item_car .toolbar_car .icon-shopping-cart {
+  display: inline-block;
+  background-image: url(../img/detail_icon4.png);
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  background-position: 0 -20px;
+}
+.detail_toolbar .toolbar_backUl {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  left: 0;
+}
+.detail_toolbar .toolbar_backUl .item_code {
+  margin: 10px 0;
+}
+.detail_toolbar .toolbar_backUl .item_code .toolbar_toogel {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  border-color: transparent transparent transparent #fff;
+  border-style: dashed dashed dashed solid;
+  border-width: 6px;
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 11px;
+}
+.detail_toolbar .toolbar_backUl .toolbar_codeIcon {
+  width: 16px;
+  height: 17px;
+  display: inline-block;
+  background: url(../img/erweima.png) no-repeat;
+  vertical-align: middle;
+}
+.detail_toolbar .toolbar_backUl .code_box {
+  display: none;
+  background: #fff;
+  border: 1px solid #e7e7e7;
+  padding: 0 20px;
+  position: absolute;
+  right: 42px;
+  top: -95px;
+  width: 185px;
+}
+.detail_toolbar .toolbar_backUl .code_box .code_title {
+  text-align: center;
+  line-height: 40px;
+  font-size: 12px;
+}
+.detail_toolbar .toolbar_backUl .code_box .pho_payMent_codeImg {
+  margin-bottom: 20px;
+  position: static;
+  border: 0;
+  padding: 0;
+  width: 145px;
+  height: 145px;
+}
+.detail_toolbar .toolbar_backUl .toolbar_codeLink:hover .code_box {
+  display: block;
+  border-right: 0;
+}
+.detail_toolbar .toolbar_backUl .toolbar_codeLink:hover .pho_payMent_codeImg {
+  display: block;
+  border-right: 0;
+}
+.detail_toolbar .toolbar_backUl .toolbar_codeLink:hover .code_box .code_title {
+  color: #777;
+}
+.detail_toolbar .toolbar_backUl .toolbar_codeLink:hover .toolbar_toogel {
+  display: inline-block;
+}
+.detail_toolbar .toolbar_backUl .toolbar_feedback {
+  display: block;
+  padding: 5px 0;
+  margin-bottom: 10px;
+}
+.detail_toolbar .toolbar_backUl .toolbar_feedback:hover {
+  background: #ee394b;
+}
+.detail_toolbar .toolbar_backUl .toolbar_feedback .toolbar_feedbackIcon {
+  background: url(../img/feedback_icon.png) no-repeat 3px 0;
+  width: 23px;
+  height: 20px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.detail_toolbar .toolbar_backUl .toolbar_goTopLink {
+  display: block;
+  padding: 5px 0;
+}
+.detail_toolbar .toolbar_backUl .toolbar_goTopLink:hover {
+  background: #ee394b;
+}
+.detail_toolbar .toolbar_backUl .toolbar_goTopLink .toolbar_goTopIcon {
+  background: url(../img/goTop_icon.png) no-repeat;
+  width: 25px;
+  height: 20px;
+  display: inline-block;
+  vertical-align: middle;
+}
+#main-top .container .main-top-title {
+  height: 50px;
+  line-height: 50px;
+  font-size: 13px;
+}
+#main-top .container .main-top-title i {
+  color: #666;
+}
+#main-top .container .main-top-title a {
+  color: #333;
+}
+#main-top .container .main-top-title span {
+  color: #666;
+}
+#main-top .container .main-top-pro .pro-left {
+  float: left;
+  width: 420px;
+}
+#main-top .container .main-top-pro .pro-left .pro-left-pic {
+  position: relative;
+  width: 418px;
+  height: 418px;
+  border: 1px solid #e7e7e7;
+  z-index: 20;
+  display: table;
+  table-layout: fixed;
+  overflow: hidden;
+}
+#main-top .container .main-top-pro .pro-left .pro-left-pic img {
+  width: 100%;
+  height: 100%;
+}
+#main-top .container .main-top-pro .pro-left .small-pic {
+  float: left;
+  overflow: hidden;
+  width: 400px;
+  height: 60px;
+  margin-top: 13px;
+  margin-left: 20px;
+}
+#main-top .container .main-top-pro .pro-left .small-pic ul li {
+  float: left;
+  width: 60px;
+  height: 60px;
+  margin-right: 20px;
+}
+#main-top .container .main-top-pro .pro-left .small-pic ul li img {
+  width: 56px;
+  height: 56px;
+  padding: 1px;
+  border: 1px solid #e7e7e7;
+  cursor: pointer;
+}
+#main-top .container .main-top-pro .pro-left .small-pic ul li .actived {
+  padding: 0!important;
+  border: 2px solid #ee394b !important;
+}
+#main-top .container .main-top-pro .pro-left .share {
+  width: 420px;
+  height: 23px;
+  margin-top: 13px;
+  float: left;
+}
+#main-top .container .main-top-pro .pro-left .share .icon-share-goods,
+#main-top .container .main-top-pro .pro-left .share .icon-collection-goods {
+  display: inline-block;
+  background-image: url(../img/detail_icon4.png);
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  *display: inline;
+  *zoom: 1;
+}
+#main-top .container .main-top-pro .pro-left .share .share-btn {
+  margin-right: 10px;
+}
+#main-top .container .main-top-pro .pro-left .share .icon-share-goods {
+  width: 12px;
+  height: 12px;
+  background-position: 0 -235px;
+}
+#main-top .container .main-top-pro .pro-left .share .icon-collection-goods {
+  width: 12px;
+  height: 12px;
+  background-position: -40px 0;
+}
+#main-top .container .main-top-pro .pro-left .share .btn_info {
+  display: inline-block;
+  color: #999;
+  vertical-align: middle;
+  cursor: pointer;
+  font-size: 12px;
+  text-align: center;
+}
+#main-top .container .main-top-pro .pro-left .share .share-btn:hover span {
+  color: #ee394b;
+}
+#main-top .container .main-top-pro .pro-left .share .share-btn:hover .icon-share-goods {
+  background-position: -20px -235px;
+}
+#main-top .container .main-top-pro .pro-left .share .share-btn:hover .icon-collection-goods {
+  background-position: -140px -22px;
+}
+#main-top .container .main-top-pro .pro-right {
+  float: left;
+  width: 759px;
+  margin-left: 20px;
+  position: relative;
+  z-index: 10;
+}
+#main-top .container .main-top-pro .pro-right .pro-right-title .detail-title {
+  overflow: hidden;
+  color: #333;
+  font-size: 18px;
+  width: 100%;
+  font-weight: bold;
+  margin: 0;
+  line-height: 26px;
+  height: 26px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price {
+  margin-top: 20px;
+  background: #e9e9e9 url(../img/detail-priceBg.png) no-repeat;
+  background-size: cover;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopPromo_panel,
+#main-top .container .main-top-pro .pro-right .detail_price .now-price,
+#main-top .container .main-top-pro .pro-right .detail_price .original-price {
+  z-index: 5;
+  line-height: 32px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .detail_metatit {
+  color: #999;
+  float: left;
+  width: 90px;
+  padding: 0 10px 0 20px;
+  font-size: 12px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info {
+  color: #999;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  position: relative;
+  overflow: hidden;
+  margin-right: 80px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info .promo_price {
+  line-height: 30px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info .promo_price .price-now {
+  color: #ee394b;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info .promo_price .price-now .tm-yen {
+  font-family: Arial;
+  font-size: 20px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info .promo_price .price-now .tm-price {
+  font-size: 30px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info .promo_price .tm-promo-type {
+  background: #ee394b;
+  color: #fff;
+  height: 19px;
+  line-height: 18px;
+  padding: 0 5px 0 5px;
+  display: inline-block;
+  position: relative;
+  margin-left: 15px;
+  top: -5px;
+  font-size: 12px;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info .promo_price .tm-promo-type i {
+  position: absolute;
+  left: -4px;
+  bottom: 0;
+  width: 0;
+  height: 0;
+  display: block;
+  font-size: 0;
+  border: 3px solid #ee394b;
+  border-color: transparent #ee394b #ee394b transparent;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info #J_old-price {
+  display: inline-block;
+  text-decoration: line-through;
+  vertical-align: middle;
+  color: #777;
+  cursor: default;
+  font-family: arial;
+}
+#main-top .container .main-top-pro .pro-right .detail_price .shopTitle_info #J_new-price {
+  display: inline-block;
+  color: #ee394b;
+  font-size: 30px;
+  vertical-align: middle;
+  white-space: nowrap;
+  line-height: 50px;
+}
+#main-top .container .main-top-pro .pro-right .detail-evaluate {
+  padding: 15px 0 10px 0;
+  border-bottom: 1px dotted #c8c8c8;
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  height: 43.6px;
+}
+#main-top .container .main-top-pro .pro-right .detail-evaluate .ind-panel-item {
+  float: left;
+  width: 100px;
+  border-left: 1px solid #ccc;
+  margin-left: -1px;
+  text-align: center;
+  font-size: 12px;
+  cursor: pointer;
+}
+#main-top .container .main-top-pro .pro-right .detail-evaluate .ind-panel-item .item-label {
+  color: #3c3c3c;
+}
+#main-top .container .main-top-pro .pro-right .detail-evaluate .ind-panel-item span {
+  color: #cc0000;
+}
+#main-top .container .main-top-pro .pro-right .detail-evaluate .ind-panel-Count i {
+  width: 16px;
+  height: 12px;
+  background: url(../img/detail-icon.png) no-repeat;
+  display: inline-block;
+  vertical-align: -1px;
+}
+#main-top .container .main-top-pro .pro-right .detail-evaluate .ind-panel-point i {
+  width: 16px;
+  height: 12px;
+  background: url(../img/detail-icon.png) no-repeat -22px 0;
+  display: inline-block;
+  vertical-align: -1px;
 }
